fix: rename group show action

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1365,7 +1365,7 @@
   "Version :version — commit [:short](:url).": "Version :version — commit [:short](:url).",
   "Via Telegram": "Par Telegram",
   "Video call": "Appel vidéo",
-  "View": "Vue",
+  "View": "Voir",
   "View :name": "Voir :name",
   "View all": "Afficher tout",
   "View details": "Afficher les détails",
